--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "node --watch server.js"
+    "dev": "node --watch server.js",
+    "build": "echo 'No build step'"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "keywords": [
     "games",
